# lictor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  llms.txt
.cargo/: config.toml
docs/: reference.md
docs/features/: README.md  activate.md  agent.md  allow.md  ask.md  catalogs.md  deny.md  detectors.md  edit-rules.md  fail-closed.md  jail.md  log.md  minify.md  modes.md  modules.md  path-rules.md  retries.md  rewrite.md  skip.md  spill.md  strikes.md  warn.md  web.md
docs/use-cases/: git-write-ban.md  markdown-frontmatter.md  protect-docs-and-tests.md  read-only-autoapprove.md  search-discipline.md  temp-and-scratch.md  typescript.md
examples/: lictor.toml
src/: agent.rs  audit.rs  bash.rs  config.rs  constants.rs  content.rs  default.toml  engine.rs  hook.rs  lib.rs  main.rs  rules.rs  web.rs
src/catalogs/: builtin.toml  mod.rs
src/minify/: filter.rs  mod.rs  spill.rs  wrap.rs
src/modules/: abspath.rs  activate.rs  git_wrap.rs  jail.rs  mod.rs  path_check.rs  path_rules.rs  pm_cwd.rs  recreate.rs  retry_allow.rs  self_rm.rs  strikes.rs
tests/: agent.rs  commands.rs  edit_retry.rs  exploits.rs  integrations.rs  modes.rs  redteam.rs  web.rs
